--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
           value="Create New Toy"
           class="submit"
         />
+        <br />
+        <input
+          type="hidden"
+          name="likes"
+          value="0"
+        />
       </form>
     </div>
     <p style="text-align:center">
