--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <div class="container">
       <form class="add-toy-form">
         <h3>Create a toy!</h3>
-
         <input
           type="text"
-          name="name"
+          name="name" 
           value=""
           placeholder="Enter a toy's name..."
           class="input-text"
@@ -46,6 +45,9 @@
       Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
     </p>
 
-    <div id="toy-collection"></div>
+    <div id="toy-collection">
+      
+    </div>
+
   </body>
 </html>
